--- a/_posts/2015-03-18-dashboard1.markdown
+++ b/_posts/2015-03-18-dashboard1.markdown
@@ -5,5 +5,5 @@ date:   2015-03-18
 categories: interactive
 ---
 <div class="embed-responsive embed-responsive-4by3">
-<iframe src="../jEx.html" frameborder="0" class="embed-responsive-item"></iframe>
+<iframe src="{{baseurl}}/jEx.html" frameborder="0" class="embed-responsive-item"></iframe>
 </div>
