edit the pathnames to gifs, case-sensitive

--- a/_posts/2015-03-17-murgif.markdown
+++ b/_posts/2015-03-17-murgif.markdown
@@ -5,4 +5,4 @@ date:   2015-03-17
 categories: graphic
 ---
 
-<img src="/img/mur1.gif" alt="animated cat" class="img-responsive img-center">
+<img src="/img/MUR1.gif" alt="animated cat" class="img-responsive img-center">
