update header to add post per category counter and only display categories with posts in the menu.

--- a/_posts/2015-03-18-jpgif.markdown
+++ b/_posts/2015-03-18-jpgif.markdown
@@ -5,5 +5,5 @@ date:   2015-03-18
 categories: graphic
 ---
 <a href="/img/JPanimation.gif" class="swipebox" title="JP Gif">
-<img src="/img/JPanimation.gif" alt="JP drinking from a goatskin bottle">
+<img src="/img/JPanimation.gif" alt="JP drinking from a goatskin bottle" class="img img-responsive">
 </a>
