Updated '_posts/2015-08-29-test2.md' via CloudCannon

--- a/_posts/2015-08-29-test2.md
+++ b/_posts/2015-08-29-test2.md
@@ -4,7 +4,7 @@ title: Test2
 date: 2015-08-29T12:33:00.000Z
 categories: audio
 comments: true
-quote: testing
+quote: "testing"
 ---
 > welcome world
 
